--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title> Web開発の練習１</title>
+  <title> Web開発の練習１2021/ 4/27</title>
 </head>
 <body>
   <!--文字の大きさの練習-->
