--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <dd>ジョージ</dd>
     <dd>リンゴ</dd>
 </dl>
+
 <dl>
     <dtlang="ja"><dfn>色</dfn></dt>
     <dtlang="en-US"><dfn>color</dfn></dt>
     <dtlang="en-GB"><dfn>colour</dfn></dt>
     <dd>可視光線の波長の長短によって人が視覚で感じ
         分けられる色覚・色刺激のこと。</dd>
-    </dl> 
+    
+      </dl> 
     <p>ゲームの得点は以下の順序で計算されます。
     
 
@@ -37,6 +39,46 @@
             <dt>それ以外の場合</dt>
             <dd>ポイントは加算されません。</dd>
         </dl>
+        <table>
+          <caption>
+            <strong>お寿司をどこで食べるか？その長所と短所</strong>
+            <details>
+              <summary>このテーブルの説明</summary>
+              <p>以下のテーブルでは、２番目のカラムに寿司店のタイプが入れられ
+                ています。その左側にそのようなタイプのお店でお寿司を食べる場合
+                の長所が、右側に短所が入れられています。</p>
+              </details>
+            </caption>
+            <thead>
+              <tr><th>長所</th><th>どこで食べるか</th><th>短所</th></tr>
+            </thead>
+            <tbody>
+              <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店
+
+              </th><td>値段が時価で不安、予約が必要</td></tr>
+              <tr><td>値段が良心的、気軽に手に取れる</td><th>回転寿司
+
+              </th><td>ネタが解凍もの、休みの日は混む</td></tr>
+            </tbody>
+          </table> 
+<table>
+  <caption>
+    <strong>お寿司をどこで食べるか？その長所と短所</strong>
+  </caption>
+  <thead>
+    <tr><th>どこで食べるか</th><th>長所</th><th>短所
+
+    </th></tr>
+  </thead>
+  <tbody>
+    <tr><th>銀座の高級店</th><td>ネタにこだわり、技術が素晴ら
+      しい</td><td>値段が時価で不安、予約が必要</td></tr>
+      <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる
+
+      </td><td>ネタが解凍もの、休みの日は混む</td></tr>
+    </tbody>
+  
+  </table>
     <!--文字の大きさの練習-->
   
    
@@ -52,12 +94,3 @@
   </html>
  
 
-<h1>Hello World</h1>
-  <h2>Hello World</h2>
-  <h3>Hello World</h3>
-  <ol>
-      <li>ほげほげ</li>
-      <li>ほにゃらら</li>
-  </ol>
-</body>
-</html>
