--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 </head>
 <body>
   <!--文字の大きさの練習-->
-  <body>
+  
+  <h1>Hello World</h1>
+  <h2>Hello World</h2>
+  <h3>Hello World</h3>
+  <ol>
+    <li>ほげほげ</li>
+    <li>ほにゃらら</li>
+  </ol>
+
+  
     <dl>
     <dt>作者</dt>
     <dd>ジョン</dd>
@@ -30,7 +39,8 @@
     <dl>
     <dt>金貨を獲得している場合</dt>
     <dd>金貨一枚につき１０ポイント加算されます。
-    </dd><dt>銀貨を獲得している場合</dt>
+    </dd>
+    <dt>銀貨を獲得している場合</dt>
     <dd>銀貨一枚につき１ポイント加算されます。</dd>
     <dt>枚数に関わらず、金貨と銀貨の両方を獲得して
         いる場合</dt>
@@ -39,6 +49,7 @@
             <dt>それ以外の場合</dt>
             <dd>ポイントは加算されません。</dd>
         </dl>
+      
         <table>
           <caption>
             <strong>お寿司をどこで食べるか？その長所と短所</strong>
@@ -62,6 +73,7 @@
             </tbody>
           </table> 
 <table>
+  
   <caption>
     <strong>お寿司をどこで食べるか？その長所と短所</strong>
   </caption>
@@ -79,18 +91,9 @@
     </tbody>
   
   </table>
-    <!--文字の大きさの練習-->
   
-   
   
-  <h1>Hello World</h1>
-    <h2>Hello World</h2>
-    <h3>Hello World</h3>
-    <ol>
-        <li>ほげほげ</li>
-        <li>ほにゃらら</li>
-    </ol>
-  </body>
-  </html>
+</body>
+</html>
  
 
