--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <!--文字の大きさの練習-->
-  
+  <br>
+  <h1>練習問題2.1</h1>
+  <br>
   <h1>Hello World</h1>
   <h2>Hello World</h2>
   <h3>Hello World</h3>
@@ -25,9 +27,9 @@
 </dl>
 
 <dl>
-    <dtlang="ja"><dfn>色</dfn></dt>
-    <dtlang="en-US"><dfn>color</dfn></dt>
-    <dtlang="en-GB"><dfn>colour</dfn></dt>
+    <dt lang="ja"><dfn>色</dfn></dt>
+    <dt lang="en-US"><dfn>color</dfn></dt>
+    <dt lang="en-GB"><dfn>colour</dfn></dt>
     <dd>可視光線の波長の長短によって人が視覚で感じ
         分けられる色覚・色刺激のこと。</dd>
     
@@ -92,8 +94,8 @@
   
   </table>
   
-  
 </body>
 </html>
+
  
 
