--- a/index.html
+++ b/index.html
@@ -94,7 +94,30 @@
     </tbody>
   
   </table>
-  
+  <br>
+  <h1>練習問題2.5</h1>
+  <br>
+  <ul>
+  <li>参考資料を調べ、次のように表示されるHTMLを書きなさい。
+    <p 
+    style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
+    <br /> 
+    この授業は<b>情報特講１</b>で、<s>眠くなる</s>大変興味深い内容です。<br />
+     <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p>
+     </li>
+     </ul>
+    <br>
+    <h1>練習問題2.6</h1>
+    <br>
+    <!DOCTYPE html>
+    <html lang-”ja”>
+       <head>
+         <meta charset="utf-8">
+         <title>練習問題2.6</title>
+        </head>
+        <body>
+          <p>テキスト入力：<input type="text"></p>
+          
 </body>
 </html>
 
