--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li>ほげほげ</li>
     <li>ほにゃらら</li>
   </ol>
+  <a id="abc">ここがabcの場所</a>
 
   <br>
   <h1>練習問題2.2</h1>
@@ -211,6 +212,14 @@
     <a href="a.html" target="_self">リンク元と同じフレームにリンクします</a><br>
     <a href="a.html" target="_parent">ひとつ上の親フレームにリンクします</a><br>
     <a href="a.html" target="_top">フレームをすべて解除してリンクします</a><br><a href="a.html" target="abc">abcという名前のフレームにリンクします</a><br>
+  <br>
+  <h1>練習問題3.3</h1>
+  <br>
+  
+ 
+  
+  <a href="#abc">abcと名前を付けた場所へリンクします</a><br>
+  <a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
   </body>
   </html>
 
