--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title> Web開発の練習１2021/ 4/27</title>
+  <link rel="stylesheet" href="mystyle.css">
+   <!--この行を追加-->
 </head>
 <body>
   <!--文字の大きさの練習-->
@@ -253,6 +255,7 @@
         <li><a>クラブ・サークル活動</a></li>
       </ul>
     </nav>  
+    
 </body>
   </html>
 
