--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>
 <h1>櫻坂46について</h1>
 <a href="b.html">興味のある方は押して下さい</a>
-<img src="./image2/thumb_main_sakurazaka46.jpg" alt="櫻坂46のページ"></a><br>
+<img src="./image2/thumb_main_sakurazaka46.jpg" alt="櫻坂46のページ"><br>
 
 
 
